cluster-talos/kubernetes/forwarders/nzbget/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nzbget
  namespace: nzbget
subsets:
  - addresses:
      - ip: 172.16.1.12
    ports:
      - port: 6789
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: nzbget
spec:
  ports:
    - port: 6789
      targetPort: 6789
