cluster-talos/kubernetes/forwarders/nzbget/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
  namespace: nzbget
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions: ["[STATUS] < 500"]
      interval: 60s
      group: arr
spec:
  parentRefs:
    - name: main
      namespace: cilium
      sectionName: https
  hostnames:
    - nzbget.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 3600s
        backendRequest: 3600s
      backendRefs:
        - name: nzbget
          port: 6789
